.article-quote.scssを追加

--- a/components.html
+++ b/components.html
@@ -179,12 +179,15 @@
     <div class="col-1">col-1</div>
   </div>
   <!-- article-quote -->
-  <div class="article-quote offset-4 col-6">
-    <p>JR鬼無駅から徒歩10歩。おそらく日本で一番「電車で行きやすい盆栽園」でしょう。北谷養盛園（きただにようせいえん）は、創業100年を超える歴史を持ち、伝統ある「日本盆栽大観展」で賞を得た錦松も所有する名園。4代目園主・北谷隆一さんの祖父・利吉さんが瀬戸内海の島々を巡って集めた黒松を畑で育てる「生産者」、鉢上げしたものを盆栽に仕立てる「技術者／販売者」、両方の機能を持っている盆栽園です。現在は3か所の畑で約5000本の黒松・五葉松・真柏を管理。特に松に関しては管理から剪定まで豊富なノウハウを持ち、庭木の管理なども請け負っています。「盆栽を媒介にした人と人のコミュニケーション」を大切にする現園主・隆一さんの実直な人柄のファンも多く、県内はもちろん、県外さらには海外にも多くの顧客がいます。
-「これから盆栽を始めたいという方は、まずは安いものでいいので一本の盆栽を一年間育ててみてほしい。それで枯らさなければグレードの高い盆栽やお気に入りの盆栽に挑戦してみるのがいいと思います」
-園主の隆一さんは現在38歳。香川の盆栽園の中でも最若手の部類に入り、経験が浅いユーザーも気軽に相談できる気さくさな人柄も魅力です。</p>
-  </div>
-  <p>美術出版社「丹下健三 伝統と創造 瀬戸内から世界へ」より</p>
+  <blockquote class="article-quote offset-4 col-6">
+    <div class="article-quote__wrapper">
+      <p class="article-quote__tittle">瀬戸内海建築憲章</p>
+      <p class="article-quote__text">JR鬼無駅から徒歩10歩。おそらく日本で一番「電車で行きやすい盆栽園」でしょう。北谷養盛園（きただにようせいえん）は、創業100年を超える歴史を持ち、伝統ある「日本盆栽大観展」で賞を得た錦松も所有する名園。4代目園主・北谷隆一さんの祖父・利吉さんが瀬戸内海の島々を巡って集めた黒松を畑で育てる「生産者」、鉢上げしたものを盆栽に仕立てる「技術者／販売者」、両方の機能を持っている盆栽園です。現在は3か所の畑で約5000本の黒松・五葉松・真柏を管理。特に松に関しては管理から剪定まで豊富なノウハウを持ち、庭木の管理なども請け負っています。「盆栽を媒介にした人と人のコミュニケーション」を大切にする現園主・隆一さんの実直な人柄のファンも多く、県内はもちろん、県外さらには海外にも多くの顧客がいます。
+  「これから盆栽を始めたいという方は、まずは安いものでいいので一本の盆栽を一年間育ててみてほしい。それで枯らさなければグレードの高い盆栽やお気に入りの盆栽に挑戦してみるのがいいと思います」
+  園主の隆一さんは現在38歳。香川の盆栽園の中でも最若手の部類に入り、経験が浅いユーザーも気軽に相談できる気さくさな人柄も魅力です。</p>
+    </div>
+    <p class="article-quote__quote-source">美術出版社「丹下健三 伝統と創造 瀬戸内から世界へ」より</p>
+  </blockquote>
   <!-- garden-link-box -->
   <ui class="garden-link-box">
     <li>
