garden-link-box.scss

--- a/components.html
+++ b/components.html
@@ -188,30 +188,74 @@
     </div>
     <p class="article-quote__quote-source">美術出版社「丹下健三 伝統と創造 瀬戸内から世界へ」より</p>
   </blockquote>
+  <div class="row">
+    <div class="col-1">えすぴい</div>
+    <div class="col-1">えすぴい</div>
+    <div class="col-1">えすぴい</div>
+    <div class="col-1">えすぴい</div>
+    <div class="col-1">えすぴい</div>
+    <div class="col-1">えすぴい</div>
+  </div>
+  <div class="row">
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+  </div>
   <!-- garden-link-box -->
-  <ui class="garden-link-box">
-    <li>
-      <img src="#">
-      <p><a href="#">花澤明春園</a></p>
-      <p>香川県高松市鬼無町鬼無748-3</p>
-      <p>087-881-2847</p>
+  <ul class="garden-link-box offset-3 col-8">
+    <li class="garden-link-box__wrapper">
+      <a href="#">
+        <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
+        <h2 class="garden-link-box__garden-name">花澤明春園</h2>
+      </a>
+      <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
+      <div class="garden-link-box__garden-phone-number">087-881-2847</div>
     </li>
-    <li>
-      <img src="#">
-      <p><a href="#">花澤明春園</a></p>
-      <p>香川県高松市鬼無町鬼無748-3</p>
-      <p>087-881-2847</p>
+    <li class="garden-link-box__wrapper">
+      <a href="#">
+        <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
+        <h2 class="garden-link-box__garden-name">花澤明春園</h2>
+      </a>
+      <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
+      <div class="garden-link-box__garden-phone-number">087-881-2847</div>
     </li>
-    <li>
-      <img src="#">
-      <p><a href="#">花澤明春園</a></p>
-      <p>香川県高松市鬼無町鬼無748-3</p>
-      <p>087-881-2847</p>
+    <li class="garden-link-box__wrapper">
+      <a href="#">
+        <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
+        <h2 class="garden-link-box__garden-name">花澤明春園</h2>
+      </a>
+      <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
+      <div class="garden-link-box__garden-phone-number">087-881-2847</div>
     </li>
-  </ui>
+    <li class="garden-link-box__wrapper">
+      <a href="#">
+        <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
+        <h2 class="garden-link-box__garden-name">花澤明春園</h2>
+      </a>
+      <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
+      <div class="garden-link-box__garden-phone-number">087-881-2847</div>
+    </li>
+    <li class="garden-link-box__wrapper">
+      <a href="#">
+        <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
+        <h2 class="garden-link-box__garden-name">花澤明春園</h2>
+      </a>
+      <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
+      <div class="garden-link-box__garden-phone-number">087-881-2847</div>
+    </li>
+  </ul>
 <!-- article-table -->
 <!-- text-link-box -->
-  <ui class="text-link-box">
+  <ul class="text-link-box">
     <li>
       <p><a href="#">初めての盆栽</a></p>
       <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
@@ -244,7 +288,7 @@
       <p><a href="#">初めての盆栽</a></p>
       <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
     </li>
-  </ui>
+  </ul>
   <div class="anker-link-box">
     <p><a href="#">あ行</a> 　｜　 <a href="#">か行</a> 　｜　 <a href="#">さ行</a> 　｜　 <a href="#">た行</a> 　｜　 <a href="#">な行</a> 　｜　 <a href="#">は行</a> 　｜　 <a href="#">ま行</a> 　｜　 <a href="#">や行</a> 　｜　 <a href="#">ら行</a> 　｜　 <a href="#">わ行</a></p>
   </div>
