text-link-box.scss

--- a/components.html
+++ b/components.html
@@ -254,39 +254,41 @@
     </li>
   </ul>
 <!-- article-table -->
+<div class="row">
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+  <div class="col-1">col-1</div>
+</div>
 <!-- text-link-box -->
-  <ul class="text-link-box">
-    <li>
-      <p><a href="#">初めての盆栽</a></p>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
+  <ul class="text-link-box offset-3 col-8">
+    <li class="text-link-box__wrapper">
+      <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
+      <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
     </li>
-    <li>
-      <p><a href="#">初めての盆栽</a></p>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
+    <li class="text-link-box__wrapper">
+      <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
+      <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
     </li>
-    <li>
-      <p><a href="#">初めての盆栽</a></p>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
+    <li class="text-link-box__wrapper">
+      <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
+      <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
     </li>
-    <li>
-      <p><a href="#">初めての盆栽</a></p>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
+    <li class="text-link-box__wrapper">
+      <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
+      <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
     </li>
-    <li>
-      <p><a href="#">初めての盆栽</a></p>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
-    </li>
-    <li>
-      <p><a href="#">初めての盆栽</a></p>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
-    </li>
-    <li>
-      <p><a href="#">初めての盆栽</a></p>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
-    </li>
-    <li>
-      <p><a href="#">初めての盆栽</a></p>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
+    <li class="text-link-box__wrapper">
+      <p class="text-link-box__article-title"><a href="#">初めての盆栽</a></p>
+      <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
     </li>
   </ul>
   <div class="anker-link-box">
