anker-link-box.scss

--- a/components.html
+++ b/components.html
@@ -291,11 +291,20 @@
       <p class="text-link-box__article-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。</p>
     </li>
   </ul>
-  <div class="anker-link-box">
-    <p><a href="#">あ行</a> 　｜　 <a href="#">か行</a> 　｜　 <a href="#">さ行</a> 　｜　 <a href="#">た行</a> 　｜　 <a href="#">な行</a> 　｜　 <a href="#">は行</a> 　｜　 <a href="#">ま行</a> 　｜　 <a href="#">や行</a> 　｜　 <a href="#">ら行</a> 　｜　 <a href="#">わ行</a></p>
-  </div>
+  <ul class="anker-link-box offset-4 col-6">
+    <li class="anker-link-box__list"><a href="#">あ行</a></li>
+    <li class="anker-link-box__list"><a href="#">か行</a></li>
+    <li class="anker-link-box__list"><a href="#">さ行</a></li>
+    <li class="anker-link-box__list"><a href="#">た行</a></li>
+    <li class="anker-link-box__list"><a href="#">な行</a></li>
+    <li class="anker-link-box__list"><a href="#">は行</a></li>
+    <li class="anker-link-box__list"><a href="#">ま行</a></li>
+    <li class="anker-link-box__list"><a href="#">や行</a></li>
+    <li class="anker-link-box__list"><a href="#">ら行</a></li>
+    <li class="anker-link-box__list"><a href="#">わ行</a></li>
+  </ul>
   <!-- text-list-link-box -->
-  <div class="text-list-link-box">
+  <div class="list-link-box offset-4 col-6">
     <div>
       <p>あ行</p>
       <ul>
