--- a/components.html
+++ b/components.html
@@ -305,34 +305,34 @@
   </ul>
   <!-- text-list-link-box -->
   <div class="list-link-box offset-4 col-6">
-    <div>
-      <p>あ行</p>
-      <ul>
-        <li>梅盆栽の手入れ、育て方</li>
-        <li>オリーブ盆栽の手入れ、育て方</li>
-        <li>イチョウ（銀杏）盆栽の手入れ、育て方</li>
-        <li>アケビ（木通・通草）盆栽の手入れ、育て方</li>
-        <li>イロハモミジ盆栽の手入れ、育て方</li>
-        <li>赤松盆栽の手入れ、育て方</li>
-        <li>ウメモドキ盆栽の手入れ、育て方</li>
-        <li>エゴノキ盆栽の手入れ、育て方</li>
-        <li>アカマツ（赤松）盆栽の手入れ、育て方</li>
-        <li>沈丁花（チンチョウゲ、ジンチョウゲ）盆栽の手入れ、育て方</li>
+    <div class="list-link-box__wrapper">
+      <h2 class="list-link-box__list-title">あ行</h2>
+      <ul class="list-link-box__list-wrapper">
+        <li class="list-link-box__list"><a href="#">梅盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">オリーブ盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">イチョウ（銀杏）盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">アケビ（木通・通草）盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">イロハモミジ盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">赤松盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">ウメモドキ盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">エゴノキ盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">アカマツ（赤松）盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">沈丁花（チンチョウゲ、ジンチョウゲ）盆栽の手入れ、育て方</a></li>
       </ul>
     </div>
-    <div>
-      <p>か行</p>
-      <ul>
-        <li>梅盆栽の手入れ、育て方</li>
-        <li>オリーブ盆栽の手入れ、育て方</li>
-        <li>イチョウ（銀杏）盆栽の手入れ、育て方</li>
-        <li>アケビ（木通・通草）盆栽の手入れ、育て方</li>
-        <li>イロハモミジ盆栽の手入れ、育て方</li>
-        <li>赤松盆栽の手入れ、育て方</li>
-        <li>ウメモドキ盆栽の手入れ、育て方</li>
-        <li>エゴノキ盆栽の手入れ、育て方</li>
-        <li>アカマツ（赤松）盆栽の手入れ、育て方</li>
-        <li>沈丁花（チンチョウゲ、ジンチョウゲ）盆栽の手入れ、育て方</li>
+    <div class="list-link-box__wrapper">
+      <h2 class="list-link-box__list-title">か行</h2>
+      <ul class="list-link-box__list-wrapper">
+        <li class="list-link-box__list"><a href="#">梅盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">オリーブ盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">イチョウ（銀杏）盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">アケビ（木通・通草）盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">イロハモミジ盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">赤松盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">ウメモドキ盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">エゴノキ盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">アカマツ（赤松）盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><a href="#">沈丁花（チンチョウゲ、ジンチョウゲ）盆栽の手入れ、育て方</a></li>
       </ul>
     </div>
   </div>
