product-link-box.scss

--- a/components.html
+++ b/components.html
@@ -336,31 +336,51 @@
       </ul>
     </div>
   </div>
-  <!-- product-link-box -->
-  <div class="product-link-box">
-    <ul>
-      <li>
-        <img src="#" />
-        <p><a href="#">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</a></p>
-        <p>売却済み</p>
-      </li>
-      <li>
-        <img src="#" />
-        <p><a href="#">加藤益造の盆栽鉢（6号サイズ）</a></p>
-        <p>47,000円</p>
-      </li>
-      <li>
-        <img src="#" />
-        <p><a href="#">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</a></p>
-        <p>売却済み</p>
-      </li>
-      <li>
-        <img src="#" />
-        <p><a href="#">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</a></p>
-        <p>47,000円</p>
-      </li>
-    </ul>
+  <div class="row">
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
   </div>
+  <!-- product-link-box -->
+  <ul class="product-link-box offset-3 col-8">
+    <li class="product-link-box__wrapper">
+      <a href="#">
+        <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
+        <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+      </a>
+        <p class="product-link-box__product-price">売却済み</p>
+    </li>
+    <li class="product-link-box__wrapper">
+      <a href="#">
+        <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
+        <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+      </a>
+        <p class="product-link-box__product-price">売却済み</p>
+    </li>
+    <li class="product-link-box__wrapper">
+      <a href="#">
+        <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
+        <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+      </a>
+        <p class="product-link-box__product-price">売却済み</p>
+    </li>
+    <li class="product-link-box__wrapper">
+      <a href="#">
+        <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
+        <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+      </a>
+        <p class="product-link-box__product-price">売却済み</p>
+    </li>
+  </ul>
   <!-- contents-link-box -->
   <div class="contents-link-box">
     <div>
