contents-link-box.scss

--- a/components.html
+++ b/components.html
@@ -381,31 +381,69 @@
         <p class="product-link-box__product-price">売却済み</p>
     </li>
   </ul>
+  <div class="row">
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+    <div class="col-1">col-1</div>
+  </div>
   <!-- contents-link-box -->
-  <div class="contents-link-box">
-    <div>
-      <div>
-        <p>盆栽と人</p>
+  <div class="contents-link-box offset-3 col-8">
+    <div class="contents-link-box__wrapper">
+      <div class="contents-link-box__box-wrapper">
+        <div class="contents-link-box__images-wrapper">
+          <a href="#">
+            <p class="contents-link-box__contents-title">盆栽と人</p>
+            <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+          </a>
+        </div>
+        <div class="contents-link-box__sumally-wrapper">
+          <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
+        </div>
       </div>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
+      <div class="contents-link-box__box-wrapper">
+        <div class="contents-link-box__images-wrapper">
+          <a href="#">
+            <p class="contents-link-box__contents-title">盆栽と人</p>
+            <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+          </a>
+        </div>
+        <div class="contents-link-box__sumally-wrapper">
+          <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
+        </div>
+      </div>
     </div>
-    <div>
-      <div>
-        <p>盆栽の基礎知識</p>
+    <div class="contents-link-box__wrapper">
+      <div class="contents-link-box__box-wrapper">
+        <div class="contents-link-box__images-wrapper">
+          <a href="#">
+            <p class="contents-link-box__contents-title">盆栽と人</p>
+            <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+          </a>
+        </div>
+        <div class="contents-link-box__sumally-wrapper">
+          <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
+        </div>
       </div>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
-    </div>
-    <div>
-      <div>
-        <p>盆栽の育て方</p>
+      <div class="contents-link-box__box-wrapper">
+        <div class="contents-link-box__images-wrapper">
+          <a href="#">
+            <p class="contents-link-box__contents-title">盆栽と人</p>
+            <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+          </a>
+        </div>
+        <div class="contents-link-box__sumally-wrapper">
+          <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
+        </div>
       </div>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
-    </div>
-    <div>
-      <div>
-        <p>盆栽用語辞典</p>
-      </div>
-      <p>世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
     </div>
   </div>
   <!-- pickup-title -->
