--- a/components.html
+++ b/components.html
@@ -292,47 +292,47 @@
     </li>
   </ul>
   <ul class="anker-link-box offset-4 col-6">
-    <li class="anker-link-box__list"><a href="#">あ行</a></li>
-    <li class="anker-link-box__list"><a href="#">か行</a></li>
-    <li class="anker-link-box__list"><a href="#">さ行</a></li>
-    <li class="anker-link-box__list"><a href="#">た行</a></li>
-    <li class="anker-link-box__list"><a href="#">な行</a></li>
-    <li class="anker-link-box__list"><a href="#">は行</a></li>
-    <li class="anker-link-box__list"><a href="#">ま行</a></li>
-    <li class="anker-link-box__list"><a href="#">や行</a></li>
-    <li class="anker-link-box__list"><a href="#">ら行</a></li>
-    <li class="anker-link-box__list"><a href="#">わ行</a></li>
+    <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">あ行</a></p></li>
+    <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">か行</a></p></li>
+    <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">さ行</a></p></li>
+    <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">た行</a></p></li>
+    <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">な行</a></p></li>
+    <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">は行</a></p></li>
+    <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">ま行</a></p></li>
+    <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">や行</a></p></li>
+    <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">ら行</a></p></li>
+    <li class="anker-link-box__list"><p class="anker-link-box__link-text"><a href="#">わ行</a></p></li>
   </ul>
   <!-- text-list-link-box -->
   <div class="list-link-box offset-4 col-6">
     <div class="list-link-box__wrapper">
       <h2 class="list-link-box__list-title">あ行</h2>
       <ul class="list-link-box__list-wrapper">
-        <li class="list-link-box__list"><a href="#">梅盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">オリーブ盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">イチョウ（銀杏）盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">アケビ（木通・通草）盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">イロハモミジ盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">赤松盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">ウメモドキ盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">エゴノキ盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">アカマツ（赤松）盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">沈丁花（チンチョウゲ、ジンチョウゲ）盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">梅盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">オリーブ盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">イチョウ（銀杏）盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">アケビ（木通・通草）盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">イロハモミジ盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">赤松盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">ウメモドキ盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">エゴノキ盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">アカマツ（赤松）盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">沈丁花（チンチョウゲ、ジンチョウゲ）盆栽の手入れ、育て方</a></p></li>
       </ul>
     </div>
     <div class="list-link-box__wrapper">
       <h2 class="list-link-box__list-title">か行</h2>
       <ul class="list-link-box__list-wrapper">
-        <li class="list-link-box__list"><a href="#">梅盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">オリーブ盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">イチョウ（銀杏）盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">アケビ（木通・通草）盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">イロハモミジ盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">赤松盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">ウメモドキ盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">エゴノキ盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">アカマツ（赤松）盆栽の手入れ、育て方</a></li>
-        <li class="list-link-box__list"><a href="#">沈丁花（チンチョウゲ、ジンチョウゲ）盆栽の手入れ、育て方</a></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">梅盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">オリーブ盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">イチョウ（銀杏）盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">アケビ（木通・通草）盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">イロハモミジ盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">赤松盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">ウメモドキ盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">エゴノキ盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">アカマツ（赤松）盆栽の手入れ、育て方</a></p></li>
+        <li class="list-link-box__list"><p class="list-link-box__list-text"><a href="#">沈丁花（チンチョウゲ、ジンチョウゲ）盆栽の手入れ、育て方</a></p></li>
       </ul>
     </div>
   </div>
