fix｜xxx-link-box｜aタグ内のテキストリンクの修正

--- a/components.html
+++ b/components.html
@@ -40,42 +40,42 @@
   <!-- people-link-box -->
   <ul class="people-link-box offset-3 col-8">
     <li class="people-link-box__wrapper">
-      <a href="#">
+      <a class="people-link-box__link-wrapper" href="#">
         <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
         <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
       </a>
       <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
     </li>
     <li class="people-link-box__wrapper">
-      <a href="#">
+      <a class="people-link-box__link-wrapper" href="#">
         <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
         <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
       </a>
       <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
     </li>
     <li class="people-link-box__wrapper">
-      <a href="#">
+      <a class="people-link-box__link-wrapper" href="#">
         <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
         <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
       </a>
       <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
     </li>
     <li class="people-link-box__wrapper">
-      <a href="#">
+      <a class="people-link-box__link-wrapper" href="#">
         <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
         <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
       </a>
       <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
     </li>
     <li class="people-link-box__wrapper">
-      <a href="#">
+      <a class="people-link-box__link-wrapper" href="#">
         <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
         <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
       </a>
       <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
     </li>
     <li class="people-link-box__wrapper">
-      <a href="#">
+      <a class="people-link-box__link-wrapper" href="#">
         <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
         <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
       </a>
@@ -213,7 +213,7 @@
   <!-- garden-link-box -->
   <ul class="garden-link-box offset-3 col-8">
     <li class="garden-link-box__wrapper">
-      <a href="#">
+      <a class="garden-link-box__link-wrapper" href="#">
         <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
         <h2 class="garden-link-box__garden-name">花澤明春園</h2>
       </a>
@@ -221,7 +221,7 @@
       <div class="garden-link-box__garden-phone-number">087-881-2847</div>
     </li>
     <li class="garden-link-box__wrapper">
-      <a href="#">
+      <a class="garden-link-box__link-wrapper" href="#">
         <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
         <h2 class="garden-link-box__garden-name">花澤明春園</h2>
       </a>
@@ -229,7 +229,7 @@
       <div class="garden-link-box__garden-phone-number">087-881-2847</div>
     </li>
     <li class="garden-link-box__wrapper">
-      <a href="#">
+      <a class="garden-link-box__link-wrapper" href="#">
         <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
         <h2 class="garden-link-box__garden-name">花澤明春園</h2>
       </a>
@@ -237,7 +237,7 @@
       <div class="garden-link-box__garden-phone-number">087-881-2847</div>
     </li>
     <li class="garden-link-box__wrapper">
-      <a href="#">
+      <a class="garden-link-box__link-wrapper" href="#">
         <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
         <h2 class="garden-link-box__garden-name">花澤明春園</h2>
       </a>
@@ -245,7 +245,7 @@
       <div class="garden-link-box__garden-phone-number">087-881-2847</div>
     </li>
     <li class="garden-link-box__wrapper">
-      <a href="#">
+      <a class="garden-link-box__link-wrapper" href="#">
         <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
         <h2 class="garden-link-box__garden-name">花澤明春園</h2>
       </a>
@@ -353,28 +353,28 @@
   <!-- product-link-box -->
   <ul class="product-link-box offset-3 col-8">
     <li class="product-link-box__wrapper">
-      <a href="#">
+      <a class="product-link-box__link-wrapper" href="#">
         <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
         <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
       </a>
         <p class="product-link-box__product-price">売却済み</p>
     </li>
     <li class="product-link-box__wrapper">
-      <a href="#">
+      <a class="product-link-box__link-wrapper" href="#">
         <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
         <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
       </a>
         <p class="product-link-box__product-price">売却済み</p>
     </li>
     <li class="product-link-box__wrapper">
-      <a href="#">
+      <a class="product-link-box__link-wrapper" href="#">
         <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
         <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
       </a>
         <p class="product-link-box__product-price">売却済み</p>
     </li>
     <li class="product-link-box__wrapper">
-      <a href="#">
+      <a class="product-link-box__link-wrapper" href="#">
         <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
         <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
       </a>
