fix｜contents-link-box｜テキストリン調整

--- a/components.html
+++ b/components.html
@@ -400,7 +400,7 @@
     <div class="contents-link-box__wrapper">
       <div class="contents-link-box__box-wrapper">
         <div class="contents-link-box__images-wrapper">
-          <a href="#">
+          <a class="contents-link-box__link-wrapper" href="#">
             <p class="contents-link-box__contents-title">盆栽と人</p>
             <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
           </a>
@@ -411,7 +411,7 @@
       </div>
       <div class="contents-link-box__box-wrapper">
         <div class="contents-link-box__images-wrapper">
-          <a href="#">
+          <a class="contents-link-box__link-wrapper" href="#">
             <p class="contents-link-box__contents-title">盆栽と人</p>
             <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
           </a>
@@ -424,7 +424,7 @@
     <div class="contents-link-box__wrapper">
       <div class="contents-link-box__box-wrapper">
         <div class="contents-link-box__images-wrapper">
-          <a href="#">
+          <a class="contents-link-box__link-wrapper" href="#">
             <p class="contents-link-box__contents-title">盆栽と人</p>
             <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
           </a>
@@ -435,7 +435,7 @@
       </div>
       <div class="contents-link-box__box-wrapper">
         <div class="contents-link-box__images-wrapper">
-          <a href="#">
+          <a class="contents-link-box__link-wrapper" href="#">
             <p class="contents-link-box__contents-title">盆栽と人</p>
             <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
           </a>
