add｜rayouts.scss｜全体Layoutのscssを新規作成

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
-    <p><a href="./components.html">Component一覧</a></p>
+    <p><a href="./components.html">component一覧</a></p>
+    <p><a href="./rayouts.html">rayouts一覧</a></p>
 </body>
 </html>
