add｜header.scss｜ロゴ等追加

--- a/rayouts.html
+++ b/rayouts.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="header__site-logo"><img src="#"></h1>
+    <h1 class="header__site-logo"><a href="#"><img src="./dist/images/common/site-logo.png"></a></h1>
     <nav class="header__menu">三</nav>
-    <div class="header__shopping-bag"><img src="#"></div>
+    <div class="header__shopping-bag"><img src="./dist/images/common/icon_shopping-bag.svg"></div>
   </header>
   <div class="flex contents">
     <!-- article-heading -->
