--- a/rayouts.html
+++ b/rayouts.html
@@ -9,7 +9,22 @@
 <body>
   <header class="header">
     <h1 class="header__site-logo"><a href="#"><img src="./dist/images/common/site-logo.png"></a></h1>
-    <nav class="header__menu">三</nav>
+    <!-- menu / start -->
+    <div class="l-drawer">
+    	<input class="l-drawer__checkbox" id="drawerCheckbox" type="checkbox" >
+    	<label class="l-drawer__icon" for="drawerCheckbox">
+    		<span class="l-drawer__icon-parts"></span>
+    	</label>
+    	<label class="l-drawer__overlay" for="drawerCheckbox"></label>
+    	<nav class="l-drawer__menu">
+    		<ul>
+    			<li class="l-drawer__item"><a class="l-drawer__item-inner" href="/">メニュー</a></li>
+    			<li class="l-drawer__item"><a class="l-drawer__item-inner" href="/">メニュー</a></li>
+    			<li class="l-drawer__item"><a class="l-drawer__item-inner" href="/">メニュー</a></li>
+    		</ul>
+    	</nav>
+    </div>
+    <!-- menu / end -->
     <div class="header__shopping-bag"><img src="./dist/images/common/icon_shopping-bag.svg"></div>
   </header>
   <div class="flex contents">
