add｜drawer.scss｜header.scssからdrawer.scssを独立

--- a/rayouts.html
+++ b/rayouts.html
@@ -8,24 +8,24 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="header__site-logo"><a href="#"><img src="./dist/images/common/site-logo.png"></a></h1>
+    <h1 class="site-logo"><a href="#"><img src="./dist/images/common/site-logo.png"></a></h1>
     <!-- menu / start -->
-    <div class="l-drawer">
-    	<input class="l-drawer__checkbox" id="drawerCheckbox" type="checkbox" >
-    	<label class="l-drawer__icon" for="drawerCheckbox">
-    		<span class="l-drawer__icon-parts"></span>
+    <div class="drawer">
+    	<input class="drawer__checkbox" id="drawerCheckbox" type="checkbox" >
+    	<label class="drawer__icon" for="drawerCheckbox">
+    		<span class="drawer__icon-parts"></span>
     	</label>
-    	<label class="l-drawer__overlay" for="drawerCheckbox"></label>
-    	<nav class="l-drawer__menu">
+    	<label class="drawer__overlay" for="drawerCheckbox"></label>
+    	<nav class="drawer__menu">
     		<ul>
-    			<li class="l-drawer__item"><a class="l-drawer__item-inner" href="/">メニュー</a></li>
-    			<li class="l-drawer__item"><a class="l-drawer__item-inner" href="/">メニュー</a></li>
-    			<li class="l-drawer__item"><a class="l-drawer__item-inner" href="/">メニュー</a></li>
+    			<li class="drawer__item"><a class="drawer__item-inner" href="/">メニュー</a></li>
+    			<li class="drawer__item"><a class="drawer__item-inner" href="/">メニュー</a></li>
+    			<li class="drawer__item"><a class="drawer__item-inner" href="/">メニュー</a></li>
     		</ul>
     	</nav>
     </div>
     <!-- menu / end -->
-    <div class="header__shopping-bag"><img src="./dist/images/common/icon_shopping-bag.svg"></div>
+    <div class="shopping-bag"><img src="./dist/images/common/icn_shopping-bag.svg"></div>
   </header>
   <div class="flex contents">
     <!-- article-heading -->
@@ -205,13 +205,13 @@
       </div>
     </div>
   </div>
-  <p>© 2019 BON - BONSAI TO HITO - ALL RIGHTS RESERVED.</p>
-  <div>
-    <img src="#">
-    <img src="#">
-    <img src="#">
-    <img src="#">
-  </div>
+  <p class="copyright">© 2019 BON - BONSAI TO HITO - ALL RIGHTS RESERVED.</p>
+  <aside class="social-box">
+    <img class="social-box__icon" src="./dist/images/common/icn_youtube.svg" src="#">
+    <img class="social-box__icon" src="./dist/images/common/icn_insta.svg" src="#">
+    <img class="social-box__icon" src="./dist/images/common/icn_facebook.svg" src="#">
+    <img class="social-box__icon" src="./dist/images/common/icn_twitter.svg" src="#">
+  </aside>
   <p>← PAGE TOP</p>
   <footer class="footer">
   </footer>
