--- a/rayouts.html
+++ b/rayouts.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="site-logo"><a href="#"><img src="./dist/images/common/site-logo.png"></a></h1>
+    <h1 class="header__site-logo"><a href="#"><img src="./dist/images/common/site-logo.png"></a></h1>
     <!-- menu / start -->
     <div class="drawer">
     	<input class="drawer__checkbox" id="drawerCheckbox" type="checkbox" >
@@ -25,7 +25,7 @@
     	</nav>
     </div>
     <!-- menu / end -->
-    <div class="shopping-bag"><img src="./dist/images/common/icn_shopping-bag.svg"></div>
+    <div class="header__shopping-bag"><img src="./dist/images/common/icn_shopping-bag.svg"></div>
   </header>
   <div class="flex contents">
     <!-- article-heading -->
@@ -205,14 +205,16 @@
       </div>
     </div>
   </div>
-  <p class="copyright">© 2019 BON - BONSAI TO HITO - ALL RIGHTS RESERVED.</p>
-  <aside class="social-box">
-    <img class="social-box__icon" src="./dist/images/common/icn_youtube.svg" src="#">
-    <img class="social-box__icon" src="./dist/images/common/icn_insta.svg" src="#">
-    <img class="social-box__icon" src="./dist/images/common/icn_facebook.svg" src="#">
-    <img class="social-box__icon" src="./dist/images/common/icn_twitter.svg" src="#">
+  <aside class="aside">
+    <p class="aside__copyright">© 2019 BON - BONSAI TO HITO - ALL RIGHTS RESERVED.</p>
+    <div class="social-box">
+      <img class="social-box__icon" src="./dist/images/common/icn_youtube.svg" src="#">
+      <img class="social-box__icon" src="./dist/images/common/icn_insta.svg" src="#">
+      <img class="social-box__icon" src="./dist/images/common/icn_facebook.svg" src="#">
+      <img class="social-box__icon" src="./dist/images/common/icn_twitter.svg" src="#">
+    </div>
+    <p class="aside__pagetop"><a href="#">PAGE TOP</a></p>
   </aside>
-  <p>← PAGE TOP</p>
   <footer class="footer">
   </footer>
 <script src="./dist/js/main.min.js"></script>
