update｜aside｜socialエリアのscssを追加

--- a/rayouts.html
+++ b/rayouts.html
@@ -205,13 +205,13 @@
       </div>
     </div>
   </div>
-  <aside class="aside">
+  <aside class="aside__">
     <p class="aside__copyright">© 2019 BON - BONSAI TO HITO - ALL RIGHTS RESERVED.</p>
-    <div class="social-box">
-      <img class="social-box__icon" src="./dist/images/common/icn_youtube.svg" src="#">
-      <img class="social-box__icon" src="./dist/images/common/icn_insta.svg" src="#">
-      <img class="social-box__icon" src="./dist/images/common/icn_facebook.svg" src="#">
-      <img class="social-box__icon" src="./dist/images/common/icn_twitter.svg" src="#">
+    <div class="aside__social-box">
+      <a href="/"><img class="aside__social-icon" src="./dist/images/common/icn_youtube.svg" src="#"></a>
+      <a href="/"><img class="aside__social-icon" src="./dist/images/common/icn_insta.svg" src="#"></a>
+      <a href="/"><img class="aside__social-icon" src="./dist/images/common/icn_facebook.svg" src="#"></a>
+      <a href="/"><img class="aside__social-icon" src="./dist/images/common/icn_twitter.svg" src="#"></a>
     </div>
     <p class="aside__pagetop"><a href="#">PAGE TOP</a></p>
   </aside>
