update｜header、Footer｜SP版調整

--- a/components.html
+++ b/components.html
@@ -25,7 +25,7 @@
     	</nav>
     </div>
     <!-- menu / end -->
-    <div class="header__shopping-bag"><img src="./dist/images/common/icn_shopping-bag.svg"></div>
+    <div class="header__shopping-bag"><a href="#"><img src="./dist/images/common/icn_shopping-bag.svg"></a></div>
   </header>
   <!-- article / start -->
   <div class="contents-wrapper">
@@ -474,17 +474,15 @@
       </div>
       <!-- contents-link-box / end -->
     </aside>
-    <aside class="aside__">
-      <p class="aside__copyright">© 2019 BON - BONSAI TO HITO - ALL RIGHTS RESERVED.</p>
-      <div class="aside__social-box">
-        <a href="/"><img class="aside__social-icon" src="./dist/images/common/icn_youtube.svg" src="#"></a>
-        <a href="/"><img class="aside__social-icon" src="./dist/images/common/icn_insta.svg" src="#"></a>
-        <a href="/"><img class="aside__social-icon" src="./dist/images/common/icn_facebook.svg" src="#"></a>
-        <a href="/"><img class="aside__social-icon" src="./dist/images/common/icn_twitter.svg" src="#"></a>
-      </div>
-      <p class="aside__pagetop"><a href="#">PAGE TOP</a></p>
-    </aside>
     <footer class="footer">
+      <div class="footer__social-box">
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_youtube.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_insta.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_facebook.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_twitter.svg" src="#"></a>
+      </div>
+      <p class="footer__pagetop"><a href="#">PAGE TOP</a></p>
+      <p class="footer__copyright">© 2019 BON - BONSAI TO HITO - ALL RIGHTS RESERVED.</p>
     </footer>
   </div>
 <script src="./dist/js/main.min.js"></script>
