--- a/components.html
+++ b/components.html
@@ -30,6 +30,33 @@
   <!-- article / start -->
   <div class="contents-wrapper">
     <article class="flex contents">
+      <!-- index-title / start -->
+      <div class="index-title offset-3 col-8">
+        <h1 class="index-title__heading">盆栽と人</h1>
+        <p class="index-title__sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。
+        <br>通学路の横に松の苗が植わりごく普通に盆栽が部屋を飾る。</p>
+      </div>
+      <!-- index-title / end -->
+      <div class="row">
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+      </div>
+      <!-- detail-title / start -->
+      <div class="detail-title offset-3 col-9">
+        <h2 class="detail-title__category-title">香川県の盆栽園</h2>
+        <h1 class="detail-title__heading">北谷養盛園</h1>
+      </div>
+      <!-- index-title / end -->
       <!-- article-heading / start -->
       <h2 class="article-heading offset-4 col-6">瀬戸内で盆栽をつくるということ</h2>
       <!-- article-heading / end -->
